fix squidanalyzer_web path

--- a/templates/squidanalyzer.conf.j2
+++ b/templates/squidanalyzer.conf.j2
@@ -1,5 +1,5 @@
-Alias /squidreport {{ squidanalyzer_web }}/squidanalyzer     
-<Directory {{ squidanalyzer_web }}/squidanalyzer>            
+Alias /squidreport {{ squidanalyzer_web }}
+<Directory {{ squidanalyzer_web }}>            
     Options -Indexes +FollowSymLinks +MultiViews
     AllowOverride None                        
 </Directory>                                  
